--- a/C3-L04-Ex3.qmd
+++ b/C3-L04-Ex3.qmd
@@ -523,7 +523,7 @@ for(s in 1:rrr){
 ```
 
 ```{r}
-#| label: lbl-classification-error
+#| label: lbl-classification-error-2
 
 probgenuine = rep(NA, m)
 for(i in 1:m){
@@ -532,10 +532,10 @@ for(i in 1:m){
 
 
 
-# probcounterfeit = rep(NA, m)
-# for(i in 1:m){
-#   probcounterfeit[i] = sum(cc.out[-seq(1,burn),n+i]==1)/(rrr-burn)
-# } 
+probcounterfeit = rep(NA, m)
+for(i in 1:m){
+   probcounterfeit[i] = sum(cc.out[-seq(1,burn),n+i]==1)/(rrr-burn)
+} 
 
 # Confusion matrix using threshold 0.5
 predicted_class <- ifelse(probcounterfeit > 0.5, 1, 2)  # 1 = counterfeit, 2 = genuine
