--- a/references.bib
+++ b/references.bib
@@ -1048,3 +1048,270 @@ note = "Accessed 11/02/16",
   year={1977},
   publisher={Wiley Online Library}
 }
+
+@misc{BibEntry2024Sep,
+	title = {{Statistics professor wins prestigious professional statistics society award {\textendash} Baskin School of Engineering}},
+  author = {Melissa Weckerle},
+	year = {2022},
+	month = July,
+	note = {[Online; accessed 17. Sep. 2024]},
+	howpublished = "\url{https://engineering.ucsc.edu/news/statistics-professor-wins-zellner-medal}"
+}
+
+@article{Durbin1960Fitting,
+ ISSN = {03731138},
+ URL = {http://www.jstor.org/stable/1401322},
+ abstract = {Le but de cette communication est un examen des méthodes d'estimation efficaces des paramètres dans quelques modèles employés dans l'analyse des séries temporelles. On considère les modèles suivants: Le modèle autorégressif: ut+α 1ut-1+....+α kut-k=ε t. (1) Régression avec variables x indépendentes et y retardés: yt+α 1yt-1+....+α pyt-p=β 1x1t+....β qxqt+ε t. (2) Régression avec variables x indépendentes et perturbations autorégressives: yt=β tx1t+....+β qxqt+ut (3) avec ut+α 1ut-1+....+α put-p=ε t. Modèle défini par des moyennes mobiles: ut=ε t+β 1ε t-1+....+β hε t-h. (4) Modèle autorégressif et erreurs définies par moyennes mobiles: ut+γ 1ut-1+....+γ put-p=ε t+δ 1ε t-1+....+δ qε t-q. (5) Dans chaque cas, il est supposé que {ε t} définit une série de variables aléatoires indépendentes avec la même distribution. Pour les modèles (1) et (2) les qualités de l'estimation par les moindres carrés sont examinées. Pour le modèle (3) on considère le cas simple yt=β xt+ut avec ut+α ut-1=ε t. Soient a, b, c les coefficients de régression (par les moindres carrés) de yt sur -yt-1′xt′xt-1. Il est démontré que β̂=(1+ar)b+(a+r)c/1+2ar+a2, lorsque r=Σ xtxt-1/Σ xt2, est un estimateur asymptotiquement efficace (à variance minimum) de β. Une extension au cas général est indiquée. Le traitement des modèles (4) et (5) est basé sur l'idée d'un ajustement aux données par la méthode des moindres carrés d'un modèle autorégressif d'ordre k, lorsque k est grand. En examinant les distributions multi-dimensionnelles des coefficients obtenus, on trouve que les estimations efficaces de β 1,...,β h dans (4) sont les solutions d'une série d'équations linéaires. Cette méthode permet d'obtenir des estimations de δ 1,...,δ q dans (5), en supposant que les valeurs γ 1,...,γ p sont connues. En utilisant ces deux méthodes alternativement, on obtient une méthode itérative pour l'ajustement du modèle (5). Une méthode d'estimation plus simple mais moins efficace, qui pourrait être utilisée pour obtenir des valeurs de départ pour l'itération est indiquée.},
+ author = {J. Durbin},
+ journal = {Revue de l'Institut International de Statistique / Review of the International Statistical Institute},
+ number = {3},
+ pages = {233--244},
+ publisher = {[International Statistical Institute (ISI), Wiley]},
+ title = {The Fitting of Time-Series Models},
+ urldate = {2024-09-17},
+ volume = {28},
+ year = {1960},
+ context = 
+}
+
+@article{Levinson1947Wiener,
+  author = {Levinson, Norman},
+  title = {The Wiener (Root Mean Square) Error Criterion in Filter Design and Prediction},
+  journal = {Journal of Mathematics and Physics},
+  volume = {25},
+  number = {1-4},
+  pages = {261-278},
+  doi = {https://doi.org/10.1002/sapm1946251261},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sapm1946251261},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sapm1946251261},
+  year = {1946}
+}
+
+@article{Trench1964ToeplitzMI,
+ title = {An Algorithm for the Inversion of Finite Toeplitz Matrices},
+ ISSN = {03684245},
+ URL = {http://ramanujan.math.trinity.edu/wtrench/research/papers/TRENCH_RP_6.PDF},
+ author = {William F. Trench},
+ journal = {Journal of the Society for Industrial and Applied Mathematics},
+ number = {3},
+ pages = {515--522},
+ publisher = {Society for Industrial and Applied Mathematics},
+ urldate = {2024-09-17},
+ volume = {12},
+ year = {1964}
+}
+
+@article{Zohar1969ToeplitzMI,
+  title={Toeplitz Matrix Inversion: The Algorithm of W. F. Trench},
+  author={Shalhav Zohar},
+  journal={J. ACM},
+  year={1969},
+  volume={16},
+  pages={592-601},
+  url={https://api.semanticscholar.org/CorpusID:3115290}
+}
+
+@book{broemeling2011bayesian,
+  title={Bayesian Analysis of Time Series},
+  author={Broemeling, Lyle D},
+  year={2019},
+  publisher={CRC Press},
+  isbn={9781138591523},
+  pages={290}
+
+}
+
+@book{broemeling2018bayesian,
+  title={Bayesian Inference for Stochastic Processes},
+  author={Broemeling, Lyle D},
+  year={2018},
+  publisher={CRC Press},
+  isbn={9781138196131},
+  pages={432},
+}
+
+@book{cowpertwait2009introductory,
+  title={Introductory Time Series with R},
+  author={Cowpertwait, P.S.P. and Metcalfe, A.V.},
+  isbn={9780387886985},
+  lccn={2009928496},
+  series={Use R!},
+  url={https://books.google.co.il/books?id=QFiZGQmvRUQC},
+  year={2009},
+  publisher={Springer New York}
+}
+
+@book{cressie2011statistics,
+  title={Statistics for Spatio-Temporal Data},
+  author={Cressie, N. and Wikle, C.K.},
+  isbn={9780471692744},
+  lccn={2010033576},
+  series={CourseSmart Series},
+  url={https://books.google.co.il/books?id=-kOC6D0DiNYC},
+  year={2011},
+  publisher={Wiley}
+}
+
+@book{davidson2015bayesian,
+  title={Bayesian Methods for Hackers: Probabilistic Programming and Bayesian Inference},
+  author={Davidson-Pilon, C.},
+  isbn={9780133902921},
+  series={Addison-Wesley Data \& Analytics Series},
+  url={https://books.google.co.il/books?id=rMKiCgAAQBAJ},
+  year={2015},
+  publisher={Pearson Education}
+}
+
+@misc{enwiki-LevinsonRecursion,
+    author = "{Wikipedia contributors}",
+    title = "Levinson recursion --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Levinson_recursion&oldid=1229942891}",
+    note = "[Online; accessed 17-September-2024]"
+}
+
+@misc{enwiki-YuleWalkerEquations,
+    author = "{Wikipedia contributors}",
+    title = "Autoregressive model --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Autoregressive_model&oldid=1233171855#Estimation_of_AR_parameters}",
+    note = "[Online; accessed 17-September-2024]"
+}
+
+
+@book{gelman2013bayesian,
+  title={Bayesian Data Analysis, Third Edition},
+  author={Gelman, A. and Carlin, J.B. and Stern, H.S. and Dunson, D.B. and Vehtari, A. and Rubin, D.B.},
+  isbn={9781439840955},
+  lccn={2013039507},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  url={https://books.google.co.il/books?id=ZXL6AQAAQBAJ},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@book{nielsen2019practical,
+  title={Practical Time Series Analysis: Prediction with Statistics and Machine Learning},
+  author={Nielsen, A.},
+  isbn={9781492041603},
+  url={https://books.google.co.il/books?id=xNOwDwAAQBAJ},
+  year={2019},
+  publisher={O'Reilly Media}
+}
+
+@book{pfaff2008analysis,
+  title={Analysis of Integrated and Cointegrated Time Series with R},
+  author={Pfaff, B.},
+  isbn={9780387759678},
+  lccn={2008930126},
+  series={Use R!},
+  url={https://books.google.co.il/books?id=ca5MkRbF3fYC},
+  year={2008},
+  publisher={Springer New York}
+}
+
+@book{prado2023time,
+  title={Time Series: Modeling, Computation, and Inference},
+  author={Prado, R. and Ferreira, M.A.R. and West, M.},
+  isbn={9781032040042},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  url={https://books.google.co.il/books?id=pZ6lzgEACAAJ},
+  year={2023},
+  publisher={CRC Press}
+}
+
+@book{ravishanker2022dynamic,
+  title={Dynamic Time Series Models using R-INLA: An Applied Perspective},
+  author={Ravishanker, N. and Raman, B. and Soyer, R.},
+  isbn={9781000622874},
+  lccn={2022004441},
+  url={https://books.google.co.il/books?id=e6h6EAAAQBAJ},
+  year={2022},
+  publisher={CRC Press}
+}
+
+@book{rios2012bayesian,
+  title={Bayesian Analysis of Stochastic Process Models},
+  author={Rios Insua, David and Ruggeri, Fabrizio and Wiper, Michael P},
+  year={2012},
+  publisher={John Wiley \& Sons},
+  isbn={9780470975916},
+  pages={300},
+}
+
+@book{theodoridis2015ML,
+  title={Machine Learning: A Bayesian and Optimization Perspective},
+  author={Theodoridis, S.},
+  isbn={9780128015223},
+  url={https://books.google.co.il/books?id=hxQRogEACAAJ},
+  year={2015},
+  publisher={Elsevier Science}
+}
+
+@book{von2002statistical,
+  title={Statistical Analysis in Climate Research},
+  author={von Storch, H. and Zwiers, F.W.},
+  isbn={9781139425094},
+  url={https://books.google.co.il/books?id=bs8hAwAAQBAJ},
+  year={2002},
+  publisher={Cambridge University Press}
+}
+
+@article{walker1931periodicity,
+  author = {Walker, Gilbert Thomas },
+  title = {On periodicity in series of related terms},
+  journal = {Proceedings of the Royal Society of London. Series A, Containing Papers of a Mathematical and Physical Character},
+  volume = {131},
+  number = {818},
+  pages = {518-532},
+  year = {1931},
+  doi = {10.1098/rspa.1931.0069},
+  URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rspa.1931.0069},
+  eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rspa.1931.0069},
+  abstract = { An important extension of our ideas regarding periodicity was made in 1927 when Yule pointed out that, instead of regarding a series of annual sunspot numbers as consisting merely of a harmonic series to which a series of random terms were added, we might suppose a certain amount of causal relationship between the successive annual numbers. In that case the system might be regarded as a physical system possessing one or more natural oscillations of its own, all subject to damping; and the effect of annual random disturbances would be to produce a fairly smooth curve with periods varying in amplitude and length, essentially as the sunspot numbers vary. If we call the departures from their mean of our series u1, u2.., Yule showed that the consequence of a single natural period is an equation like ux = kux-1 - ux-2 + vx, where vx represents the “accidental” external “disturbance”; and if there are two natural periods, ux = k1 (ux-1 + ux-3) - k2ux-2 - ux-4 + vx }
+}
+
+@book{west2013bayesian,
+  title={Bayesian Forecasting and Dynamic Models},
+  author={West, M. and Harrison, J.},
+  isbn={9781475793659},
+  lccn={89011497},
+  series={Springer Series in Statistics},
+  url={https://books.google.co.il/books?id=NmfaBwAAQBAJ},
+  year={2013},
+  publisher={Springer New York}
+}
+
+@book{woodward2022time,
+  title={Time Series for Data Science: Analysis and Forecasting},
+  author={Woodward, W.A. and Sadler, B.P. and Robertson, S.},
+  isbn={9781000555332},
+  lccn={2021048204},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  url={https://books.google.co.il/books?id=_W16EAAAQBAJ},
+  year={2022},
+  publisher={CRC Press}
+}
+
+@article{yule1927periodicities,
+  author = {Yule, George Udny },
+  title = {VII. On a method of investigating periodicities disturbed series, with special reference to Wolfer's sunspot numbers},
+  journal = {Philosophical Transactions of the Royal Society of London. Series A, Containing Papers of a Mathematical or Physical Character},
+  volume = {226},
+  number = {636-646},
+  pages = {267-298},
+  year = {1927},
+  doi = {10.1098/rsta.1927.0007},
+  URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.1927.0007},
+  eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.1927.0007},
+  abstract = { If we take a curve representing a simple harmonic function of the time, and superpose on the ordinates small random errors, the only effect is to make the graph somewhat irregular, leaving the suggestion of periodicity still quite clear to the eye. Fig. 1 (a) shows such a curve, the random errors having been determined by the throws of dice. If the errors are increased in magnitude, as in fig. 1 (b), the graph becomes more irregular, the suggestion of periodicity more obscure, and we have only sufficiently to increase the “errors” to mask completely any appearance of periodicity. But, however large the errors, periodogram analysis is applicable to such a curve, and, given a sufficient number of periods, should yield a close approximation to the period and amplitude of the underlying harmonic function. When periodogram analysis is applied to data respecting any physical phenomenon in the expectation of eliciting one or more true periodicities, there is usually, as it seems to me, a tendency to start from the initial hypothesis that the periodicity or periodicities are masked solely by such more or less random superposed fluctuations— fluctuations which do not in any way disturb the steady course of the underlying periodic function or functions. It is true that the periodogram itself will indicate the truth or otherwise of the hypothesis made, but there seems no reason for assuming it to be the hypothesis most likely a priori. }
+}
+
+@book{BMCP2021,
+  title = {{Bayesian Modeling and Computation in Python}},
+  author = {Martin, Osvaldo A. and Kumar, Ravin and Lao, Junpeng},
+  year = {2021},
+  month = dec,
+  address = {{Boca Raton}},
+  isbn = {978-0-367-89436-8},
+}
